--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,14 +66,12 @@ dependencies {
     implementation("androidx.navigation:navigation-ui-ktx:2.4.2")
 
     //Power Spinner
-    implementation("com.jaredrummler:material-spinner:1.3.1")
     implementation("com.github.skydoves:powerspinner:1.2.1")
 
-    //Caroutines
+    //Coroutines
     def coroutines_version = "1.6.1"
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version")
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$coroutines_version")
 
     //Retrofit
     def retrofit_version = "2.9.0"
@@ -86,11 +84,6 @@ dependencies {
     def moshiVersion = "1.13.0"
     implementation("com.squareup.moshi:moshi-kotlin:$moshiVersion")
     kapt("com.squareup.moshi:moshi-kotlin-codegen:$moshiVersion")
-
-    //Glide
-    def glide_version = "4.13.0"
-    implementation("com.github.bumptech.glide:glide:$glide_version")
-    kapt("com.github.bumptech.glide:compiler:4.13.0")
 
     //splash Android 12
     implementation("androidx.core:core-splashscreen:1.0.0-beta02")
