--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,9 +9,6 @@ plugins {
 android {
     compileSdkVersion 32
 
-    Properties properties = new Properties()
-    properties.load(project.rootProject.file("local.properties").newDataInputStream())
-
     defaultConfig {
         applicationId "com.mbobiosio.currencyconverter"
         minSdkVersion 23
@@ -44,11 +41,6 @@ android {
         }
     }
     namespace 'com.mbobiosio.currencyconverter'
-
-    buildTypes.each {
-        it.buildConfigField 'String', 'API_KEY', properties.getProperty("apiKey")
-    }
-
 }
 
 dependencies {
@@ -114,8 +106,33 @@ dependencies {
     implementation("com.intuit.sdp:sdp-android:1.0.6")
     implementation("com.intuit.ssp:ssp-android:1.0.6")
 
+    //mock
+    testImplementation 'org.mockito:mockito-core:4.4.0'
+    androidTestImplementation "org.mockito:mockito-android:4.2.0"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
+    //mock extension
+    testImplementation "io.mockk:mockk:1.12.3"
+
     testImplementation("junit:junit:4.13.2")
     androidTestImplementation("androidx.test.ext:junit-ktx:1.1.3")
     androidTestImplementation("androidx.test.espresso:espresso-core:3.4.0")
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1"
+
+    androidTestImplementation("com.google.dagger:hilt-android-testing:2.41")
+    kaptAndroidTest("com.google.dagger:hilt-android-compiler:2.41")
+
+    // Assertions
+    testImplementation "com.google.truth:truth:1.1.3"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+
+    // AndroidJUnitRunner and JUnit Rules
+    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
+
+    // Core library
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+
+    //api test
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.3"
 
 }
