--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,13 +45,13 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation("com.google.android.material:material:1.6.0")
-    implementation("androidx.core:core-ktx:1.7.0")
-    implementation("androidx.appcompat:appcompat:1.4.1")
-    implementation("androidx.constraintlayout:constraintlayout:2.1.3")
+    implementation("com.google.android.material:material:1.6.1")
+    implementation("androidx.core:core-ktx:1.8.0")
+    implementation("androidx.appcompat:appcompat:1.4.2")
+    implementation("androidx.constraintlayout:constraintlayout:2.1.4")
 
-    implementation("androidx.activity:activity-ktx:1.4.0")
-    implementation("androidx.fragment:fragment-ktx:1.4.1")
+    // implementation("androidx.activity:activity-ktx:1.4.0")
+    // 0implementation("androidx.fragment:fragment-ktx:1.4.1")
 
     // Navigation
     implementation("androidx.navigation:navigation-fragment-ktx:2.4.2")
